# pokemon_tcg_research

./: .gitignore  PROJECT.md  README.md  inspect_db.ipynb  inspect_summary_db.ipynb  main.py  pyproject.toml  youtube_transcript.ipynb
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
config/: config.py
docs/: ai-summarization.md  api-rate-limiting.md  embeddings-and-vector-store.md  sqlite-transcript-database.md  verification-and-feedback-loop.md  youtube-transcript.md
notebooks/: inspect_db.ipynb  inspect_summary_db.ipynb  inspect_verification_db.ipynb  youtube_transcript.ipynb
src/database/: transcript_db.py
src/embeddings/: chunker.py  vector_store.py
src/summarizer/: summarizer.py
src/utils/: logger.py
src/verifier/: verifier.py
src/youtube_transcripts/: youtube_transcript.py
