[project]
name = "pokemon_tcg_research"
version = "0.1.0"
description = "Sentiment market analysis on Pokemon TCG based on Influenctial Youtubers"
readme = "README.md"
authors = [
    { name = "Ling Zi Jian", email = "lingzijian@hotmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "chromadb",
    "google-api-python-client>=2.190.0",
    "pandas",
    "pydantic-settings>=2.13.1",
    "sentence-transformers",
    "tqdm>=4.67.1",
    "youtube-transcript-api>=1.2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "black",
    "ruff",
]
docs = []