[project]
name = "pokemon_tcg_research"
version = "0.1.0"
description = "Sentiment market analysis on Pokemon TCG based on Influenctial Youtubers"
readme = "README.md"
authors = [
    { name = "Ling Zi Jian", email = "lingzijian@hotmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "google-api-python-client>=2.190.0",
    "ollama>=0.4.0",
    "pandas>=3.0.1",
    "pydantic-settings>=2.13.1",
    "tqdm>=4.67.1",
    "tavily-python>=0.5.0",
    "youtube-transcript-api>=1.2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff",
]
docs = []